fix : SchedulingController to pass test